# meshcore-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: build_and_test.yml  checks.yml  release.yml
examples/: basic.rs  btle.rs  serial_usb.rs
src/: connection.rs  error.rs  events.rs  lib.rs  meshcore.rs  packets.rs  parsing.rs  reader.rs
src/commands/: base.rs  binary.rs  contact.rs  device.rs  messaging.rs  mod.rs
src/meshcore/: ble.rs  mod.rs  serial.rs  tcp.rs
