[package]
name = "meshcore"
version = "0.1.0"
edition = "2021"
description = "Rust library for communicating with MeshCore companion radio nodes"
license = "MIT"
repository = "https://github.com/andrewdavidmackenzie/meshcore-rs"
keywords = ["meshcore", "lora", "mesh", "radio"]
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
tokio = { version = "1", features = ["full", "sync", "time", "io-util"] }
tokio-serial = "5"
async-trait = "0.1"
thiserror = "2"
bytes = "1"
tracing = "0.1"
futures = "0.3"

# BLE support (optional)
btleplug = { version = "0.11", optional = true }

[features]
default = ["serial", "tcp"]
serial = []
tcp = []
ble = ["btleplug"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
