[package]
name = "meshcore"
version = "0.1.0"
edition = "2021"
description = "Rust library for communicating with MeshCore companion radio nodes"
license = "MIT"
repository = "https://github.com/andrewdavidmackenzie/meshcore-rs"
keywords = ["meshcore", "lora", "mesh", "radio"]
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
tokio = { version = "1", features = ["full", "sync", "time", "io-util"] }
tokio-serial = "5"
thiserror = "2"
bytes = "1"
tracing = "0.1"
futures = "0.3"

# BLE support (optional)
btleplug = { version = "0.11", optional = true }
uuid = { version = "1", optional = true }

[features]
default = ["serial", "tcp", "ble"]
serial = []
tcp = []
ble = ["btleplug", "uuid"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
